# BackendLab5

./: Dockerfile  docker-compose.yaml  note.md  pyproject.toml
app/: .env  entrypoint.sh  main.py
app/alembic/: env.py
app/alembic/versions/: 930a1774d5bc_.py  a1b2c3d4e5f6_add_video_generations.py  d264ce70caa7_.py  fbb05ed0bdae_.py
app/api/: __init__.py  auth.py  categories.py  images.py  posts.py  tags.py  test.py  users.py  video_generations.py
app/api/dependency/: paginate.py
app/authentication/: backend.py  fastapi_users.py  strategy.py  transport.py  user_manager.py
app/authentication/helper/: access_tokens.py  user_manager.py  users.py
app/config/: config.py
app/exceptions/: __init__.py  exceptions.py
app/mailing/: __init__.py  smtp.py
app/models/: __init__.py  access_token.py  db_helper.py  image.py  post.py  users.py  video_generation.py
app/queries/: category_queries.py  image_queries.py  post_queries.py  tag_queries.py  video_generation_queries.py
app/queries/filters/: post_filter.py
app/repositories/: category_repository.py  image_repository.py  post_repository.py  tag_repository.py  video_generation_repository.py
app/schemas/: category_schema.py  excel_schema.py  file_schema.py  image_schema.py  post_schema.py  tag_schema.py  video_generation_schema.py
app/service/: category_service.py  image_service.py  post_service.py  video_generation_service.py
app/service/calculators/: __init__.py  external_read_time_calculator.py  (+1 more)
app/task_queue/: taskiq_broker.py
app/tasks/: image_gen.py  post_email.py  video_gen.py
(+4 files in other folders)
